fix layout bugs, add flexible layout

--- a/app/index.css
+++ b/app/index.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -61,6 +61,10 @@ p {
   margin: 0 0 25px;
 }
 
+p:last-child {
+  margin-bottom: 0;
+}
+
 footer {
   flex-grow: 0;
   flex-shrink: 0;
@@ -88,4 +92,26 @@ footer ul li:after {
 
 footer ul li:last-child:after {
   content: none;
+}
+
+@media screen and (max-width: 620px) {
+  body {
+    font-size: 20px;
+    padding: 15px;
+  }
+
+  header,
+  main,
+  footer {
+    max-width: 420px;
+  }
+
+  h1 {
+    font-size: 20px;
+    margin: 0 0 10px;
+  }
+
+  p {
+    margin: 0 0 15px;
+  }
 }
